--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^0.19.0",
     "bootstrap": "^4.3.1",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
@@ -13,10 +14,11 @@
     "styled-components": "^4.3.2"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "concurrently \"react-scripts start\" \"npm run mock\" ",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "mock": "json-server --watch db.json --port 3004"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -34,9 +36,12 @@
     ]
   },
   "devDependencies": {
+    "concurrently": "^4.1.1",
     "enzyme": "^3.10.0",
     "enzyme-adapter-react-16": "^1.14.0",
+    "json-server": "^0.15.0",
     "react-test-renderer": "^16.8.6",
     "webpack": "^4.38.0"
-  }
+  },
+  "proxy": "http://localhost:3004"
 }
