接入redux管理全局数据源

--- a/package.json
+++ b/package.json
@@ -52,6 +52,8 @@
     "react-ionicons": "^2.1.6",
     "react-router-dom": "^5.0.1",
     "recharts": "^1.7.1",
+    "redux": "^4.0.4",
+    "redux-thunk": "^2.3.0",
     "resolve": "1.10.0",
     "sass-loader": "7.1.0",
     "semver": "6.0.0",
